--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
@@ -41,6 +42,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
+    "sass": "^1.69.5",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^0.32.2"
