--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "5.4.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.4.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@codetrix-studio/capacitor-google-auth": "^3.3.5",
     "@ionic/react": "^7.5.2",
     "@ionic/react-router": "^7.5.2",
     "@types/react-router": "^5.1.20",
